multiple url support

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ ESPO_ENTITIES=xxx,xxx
 # Dynamic API base names (comma-separated)
 API_BASE_NAMES=api,xxx
 
-# CORS configuration
+# CORS configuration (comma-separated for multiple origins)
 CORS_ORIGIN=http://localhost:3000,xxx
 
