--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,14 @@ API_BASE_NAMES=api,xxx
 # CORS configuration (comma-separated for multiple origins)
 CORS_ORIGIN=http://localhost:3000,xxx
 
+# Rate limiting configuration
+RATE_LIMIT_MAX_REQUESTS=20
+RATE_LIMIT_WINDOW_MS=1000
+
+# Request timeout in milliseconds
+REQUEST_TIMEOUT_MS=30000
+
+# Batch processing configuration
+POPULATE_BATCH_SIZE=3
+POPULATE_BATCH_DELAY_MS=100
+
