--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,28 @@ REQUEST_TIMEOUT_MS=30000
 POPULATE_BATCH_SIZE=3
 POPULATE_BATCH_DELAY_MS=100
 
+# -----------------------------------
+# Chat Assistant (OpenAI + Catalogue)
+# -----------------------------------
+
+# IMPORTANT: Keep this server-side (NEVER expose in React client code).
+OPENAI_API_KEY=
+
+# Fast & affordable default. Change if you prefer.
+OPENAI_MODEL=gpt-4o-mini
+
+# Response budgeting (lower = faster/cheaper).
+OPENAI_MAX_OUTPUT_TOKENS=250
+
+# Product query settings
+CHAT_PRODUCT_MAX_SIZE=200
+CHAT_MIN_SCORE=10
+
+# Filter catalogue products by merchTags.
+# Default behavior matches existing product search: "ecatalogue".
+# Disable by setting: CHAT_REQUIRE_MERCHTAG=none
+CHAT_REQUIRE_MERCHTAG=ecatalogue
+
+# Lead capture (optional)
+CHAT_LEAD_ENTITY=Lead
+CHAT_LEAD_ACCOUNT_FIELD=accountName
