--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,27 @@ CHAT_REQUIRE_MERCHTAG=ecatalogue
 # Lead capture (optional)
 CHAT_LEAD_ENTITY=Lead
 CHAT_LEAD_ACCOUNT_FIELD=accountName
+
+# -----------------------------------
+# IndexNow Configuration
+# -----------------------------------
+
+# Enable/disable IndexNow submissions
+INDEXNOW_ENABLED=true
+
+# IndexNow endpoint (choose one - notifying one endpoint is enough)
+INDEXNOW_ENDPOINT=https://api.indexnow.org/indexnow
+
+# Your ownership key (8-128 chars, allowed: a-z A-Z 0-9 and -)
+# Generate a random key and create a file named {KEY}.txt on your frontend host
+INDEXNOW_KEY=your-generated-key-here
+
+# The host where your URLs are served (NO protocol, just domain)
+# This should be your frontend domain where the key file is hosted
+INDEXNOW_HOST=www.example.com
+
+# Optional: Custom key file location (if not at root)
+# INDEXNOW_KEY_LOCATION=https://www.example.com/path/to/keyfile.txt
+
+# Optional: Multiple hosts as JSON array (if you have multiple domains)
+# INDEXNOW_HOSTS_JSON=["www.example.com","shop.example.com"]
