indexnow through sitemap

--- a/.env.example
+++ b/.env.example
@@ -48,25 +48,37 @@ CHAT_LEAD_ENTITY=Lead
 CHAT_LEAD_ACCOUNT_FIELD=accountName
 
 # -----------------------------------
-# IndexNow Configuration
+# IndexNow Scheduler Configuration
 # -----------------------------------
 
-# Enable/disable IndexNow submissions
-INDEXNOW_ENABLED=true
+# Enable/disable IndexNow scheduler
+INDEXNOW_SCHEDULER_ENABLED=true
 
-# IndexNow endpoint (choose one - notifying one endpoint is enough)
+# IndexNow endpoint
 INDEXNOW_ENDPOINT=https://api.indexnow.org/indexnow
 
-# Your ownership key (8-128 chars, allowed: a-z A-Z 0-9 and -)
+# Your ownership key (8-128 chars: a-z A-Z 0-9 and -)
 # Generate a random key and create a file named {KEY}.txt on your frontend host
 INDEXNOW_KEY=your-generated-key-here
 
-# The host where your URLs are served (NO protocol, just domain)
-# This should be your frontend domain where the key file is hosted
+# Your frontend domain (NO protocol)
 INDEXNOW_HOST=www.example.com
 
-# Optional: Custom key file location (if not at root)
-# INDEXNOW_KEY_LOCATION=https://www.example.com/path/to/keyfile.txt
+# Sitemap URL to fetch all URLs from
+INDEXNOW_SITEMAP_URL=https://www.example.com/sitemap.xml
 
-# Optional: Multiple hosts as JSON array (if you have multiple domains)
-# INDEXNOW_HOSTS_JSON=["www.example.com","shop.example.com"]
+# Schedule (cron format) - Default: daily at 2 AM UTC
+# Examples:
+# Daily at 2 AM: 0 2 * * *
+# Every 6 hours: 0 */6 * * *
+# Weekly on Sunday at 3 AM: 0 3 * * 0
+INDEXNOW_SCHEDULE=0 2 * * *
+
+# Timezone for scheduler (optional)
+INDEXNOW_TIMEZONE=UTC
+
+# Run once on startup for testing (optional)
+# INDEXNOW_RUN_ON_STARTUP=true
+
+# Frontend URL for building URLs (optional - defaults to https://INDEXNOW_HOST)
+# FRONTEND_URL=https://www.example.com
