--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
-    "mongoose": "^9.1.0"
+    "mongoose": "^9.1.0",
+    "node-cron": "^3.0.3"
   }
 }
