--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,19 @@ POPULATE_BATCH_SIZE=3
 POPULATE_BATCH_DELAY_MS=100
 
 # -----------------------------------
+# Cache Configuration
+# -----------------------------------
+
+# Cache refresh interval in hours (default: 24 hours)
+CACHE_REFRESH_INTERVAL_HOURS=24
+
+# Maximum records to fetch per entity (default: 5000)
+ESPO_LIST_MAX_TOTAL=5000
+
+# Page size for fetching records (default: 200)
+ESPO_LIST_PAGE_SIZE=200
+
+# -----------------------------------
 # Chat Assistant (OpenAI + Catalogue)
 # -----------------------------------
 
