--- a/.env.example
+++ b/.env.example
@@ -95,3 +95,20 @@ INDEXNOW_TIMEZONE=UTC
 
 # Frontend URL for building URLs (optional - defaults to https://INDEXNOW_HOST)
 # FRONTEND_URL=https://www.example.com
+
+CACHE_REFRESH_INTERVAL_HOURS=24
+
+# Maximum records to fetch per entity (default: 5000)
+ESPO_LIST_MAX_TOTAL=5000
+
+# Page size for fetching records (default: 200)
+ESPO_LIST_PAGE_SIZE=200
+
+
+#revalidate 
+
+REVALIDATE_SECRET=theSameSecretAsFrontends
+
+FRONTEND_A_REVALIDATE_URL=https://YOUR-LANDING-SITE/api/revalidate
+
+FRONTEND_B_REVALIDATE_URL=https://YOUR-SHOP-APP/api/revalidate
