--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ESPO_BASE_URL=xxx
 ESPO_API_KEY= xxx
-ESPO_API_PREFIX=xxx
+ESPO_API_PREFIX=xxxx
 # Multiple entities (comma-separated)
 ESPO_ENTITIES=xxx,xxx
 
