--- a/.env.example
+++ b/.env.example
@@ -112,3 +112,20 @@ REVALIDATE_SECRET=theSameSecretAsFrontends
 FRONTEND_A_REVALIDATE_URL=https://YOUR-LANDING-SITE/api/revalidate
 
 FRONTEND_B_REVALIDATE_URL=https://YOUR-SHOP-APP/api/revalidate
+
+# -----------------------------------
+# OTP Authentication Configuration
+# -----------------------------------
+
+# Gmail credentials for sending OTP emails
+GMAIL_USER=vivekkalal4690@gmail.com
+GMAIL_APP_PASSWORD=wmlt xtxs nxjr nrtb
+
+# OTP security settings
+OTP_SECRET=your-very-long-random-secret-string-here
+OTP_TTL_MINUTES=5
+OTP_RESEND_COOLDOWN_SECONDS=60
+OTP_MAX_FAILS=5
+
+# EspoCRM entity for customer accounts
+OTP_ENTITY=CCustomerAccount
