--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.0",
     "node-cache": "^5.1.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
