--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ ESPO_ENTITIES=xxx,xxx
 API_BASE_NAMES=api,xxx
 
 # CORS configuration (comma-separated for multiple origins)
-CORS_ORIGIN=http://localhost:3000,xxx
+CORS_ORIGIN=http://localhost:3000,xxx-newurl
 
 # Rate limiting configuration
 RATE_LIMIT_MAX_REQUESTS=20
