--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
     { "src": "/(.*)", "dest": "/index.js" }
   ],
   "crons": [
-    { "path": "/health", "schedule": "*/10 * * * *" }
+    { "path": "/health", "schedule": "0 2 */2 * *" }
   ]
 }
