new email changes

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,20 @@ ESPO_LIST_MAX_TOTAL=5000
 # Page size for fetching records (default: 200)
 ESPO_LIST_PAGE_SIZE=200
 
+# Entities to cache (comma-separated)
+# These entities use TIMED cache with 24-hour TTL and auto-refresh
+# Fast responses (10-50ms) with automatic data refresh
+# Example: CACHE_ENTITIES=CProduct,CCollection,CBlog
+# Leave empty to cache all entities (except NO_CACHE_ENTITIES)
+CACHE_ENTITIES=
+
+# Entities with NO cache (comma-separated) - Always Fresh!
+# These entities NEVER use cache and always fetch fresh data from EspoCRM
+# Slower responses (2-5 seconds) but always 100% up-to-date
+# Example: NO_CACHE_ENTITIES=CCustomerAccount,Lead,COrder
+# Use this for real-time data that changes frequently
+NO_CACHE_ENTITIES=
+
 # -----------------------------------
 # Chat Assistant (OpenAI + Catalogue)
 # -----------------------------------
@@ -96,14 +110,6 @@ INDEXNOW_TIMEZONE=UTC
 # Frontend URL for building URLs (optional - defaults to https://INDEXNOW_HOST)
 # FRONTEND_URL=https://www.example.com
 
-CACHE_REFRESH_INTERVAL_HOURS=24
-
-# Maximum records to fetch per entity (default: 5000)
-ESPO_LIST_MAX_TOTAL=5000
-
-# Page size for fetching records (default: 200)
-ESPO_LIST_PAGE_SIZE=200
-
 
 #revalidate 
 
@@ -118,8 +124,8 @@ FRONTEND_B_REVALIDATE_URL=https://YOUR-SHOP-APP/api/revalidate
 # -----------------------------------
 
 # Gmail credentials for sending OTP emails
-GMAIL_USER=vivekkalal4690@gmail.com
-GMAIL_APP_PASSWORD=wmlt xtxs nxjr nrtb
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-app-password
 
 # OTP security settings
 OTP_SECRET=your-very-long-random-secret-string-here
