cloudnary variations done

--- a/.env.example
+++ b/.env.example
@@ -135,3 +135,7 @@ OTP_MAX_FAILS=5
 
 # EspoCRM entity for customer accounts
 OTP_ENTITY=CCustomerAccount
+
+
+# note to add the entity and it image for cloudnary 6 variation: 
+# Go to genericController.js and in the line 226 just add the entity name and its image field name like other.
