--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ ESPO_API_PREFIX=xxx
 # Multiple entities (comma-separated)
 ESPO_ENTITIES=xxx,xxx
 
+# Fields to fetch from CCollection when populating collection relation
+ESPO_COLLECTION_SELECT_FIELDS=id,name,slug,collectionImage1CloudUrl,altTextCollectionImage1,collectionvideoURL,collectionaltTextVideo
+
+# Fields to fetch from CProduct when populating product relation
+ESPO_PRODUCT_SELECT_FIELDS=id,name,slug,productImage1CloudUrl,altTextProductImage1,price,salePrice,stockQuantity,sku
+
 # Dynamic API base names (comma-separated)
 API_BASE_NAMES=api,xxx
 
