--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ ESPO_LIST_MAX_TOTAL=5000
 ESPO_LIST_PAGE_SIZE=200
 
 # Entities to cache (comma-separated)
-# These entities use TIMED cache with 24-hour TTL and auto-refresh
+# These entities use cache with 24-hour TTL and auto-refresh
 # Fast responses (10-50ms) with automatic data refresh
 # Example: CACHE_ENTITIES=CProduct,CCollection,CBlog
 # Leave empty to cache all entities (except NO_CACHE_ENTITIES)
@@ -49,8 +49,8 @@ CACHE_ENTITIES=
 
 # Entities with NO cache (comma-separated) - Always Fresh!
 # These entities NEVER use cache and always fetch fresh data from EspoCRM
-# Slower responses (2-5 seconds) but always 100% up-to-date
-# Example: NO_CACHE_ENTITIES=CCustomerAccount,Lead,COrder
+# Slower responses but always 100% up-to-date
+# Example: NO_CACHE_ENTITIES=CCustomerAccount,Lead,COrder,CWishlist
 # Use this for real-time data that changes frequently
 NO_CACHE_ENTITIES=
 
