--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,11 @@ CACHE_ENTITIES=
 # Use this for real-time data that changes frequently
 NO_CACHE_ENTITIES=
 
+# Short cache TTL for NO_CACHE entities (in seconds, default: 5)
+# This provides burst protection without sacrificing freshness
+# Set to 0 to completely disable caching for NO_CACHE entities
+NO_CACHE_SHORT_TTL_SECONDS=5
+
 # -----------------------------------
 # Chat Assistant (OpenAI + Catalogue)
 # -----------------------------------
