--- a/.env.example
+++ b/.env.example
@@ -56,8 +56,13 @@ NO_CACHE_ENTITIES=
 
 # Short cache TTL for NO_CACHE entities (in seconds, default: 5)
 # This provides burst protection without sacrificing freshness
-# Set to 0 to completely disable caching for NO_CACHE entities
+# Set to 0 to completely disable caching for NO_CACHE entities (always fresh)
 NO_CACHE_SHORT_TTL_SECONDS=5
+
+# In-flight request de-duplication (default: true)
+# Prevents duplicate EspoCRM requests when multiple users hit the same endpoint simultaneously
+# Keeps responses fast even with NO_CACHE_SHORT_TTL_SECONDS=0
+INFLIGHT_DEDUP_ENABLED=true
 
 # -----------------------------------
 # Chat Assistant (OpenAI + Catalogue)
