--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,11 @@ NO_CACHE_SHORT_TTL_SECONDS=5
 # Keeps responses fast even with NO_CACHE_SHORT_TTL_SECONDS=0
 INFLIGHT_DEDUP_ENABLED=true
 
+# Run startup jobs (cache warmer, schedulers) - default: false for serverless
+# Set to false on Vercel/serverless to avoid blocking first request
+# Set to true for always-on servers (Railway, DigitalOcean, etc.)
+RUN_STARTUP_JOBS=false
+
 # -----------------------------------
 # Chat Assistant (OpenAI + Catalogue)
 # -----------------------------------
