--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
     { "src": "/(.*)", "dest": "/index.js" }
   ],
   "crons": [
-    { "path": "/health", "schedule": "0 2 */2 * *" }
+    {
+      "path": "/health",
+      "schedule": "*/5 * * * *"
+    }
   ]
 }
